manifests/hola-mundo-istio-v2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola-mundo-v2
  namespace: hola-mundo-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hola-mundo-v2
  template:
    metadata:
      labels:
        app: hola-mundo-v2
    spec:
      containers:
        - name: hola-mundo-v2
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
            - name: secrets-store-inline # <-- Añadir esto
              mountPath: "/mnt/secrets-store" # El path donde se montarán los secretos
              readOnly: true
      volumes:
        - name: html
          configMap:
            name: hola-mundo-v2-html
        - name: secrets-store-inline # <-- Añadir esto
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "vault-hola-mundo-v2"
