manifests/hola-mundo-istio-v2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hola-mundo-v2
  namespace: hola-mundo-v2
spec:
  selector:
    app: hola-mundo-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
