manifests/hola-mundo-istio-v2/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hola-mundo-gateway-v2
  namespace: hola-mundo-v2
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts: ["hola-v2.local"]
