manifests/hola-mundo-istio-v2/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hola-mundo-v2-vs
  namespace: hola-mundo-v2
spec:
  hosts:
    - "hola-v2.local"
  gateways:
    - hola-mundo-gateway-v2
  http:
    - route:
        - destination:
            host: hola-mundo-v2
            port:
              number: 80
